task_13_terraform_bastion/dev/elastic_ips.tf
resource "aws_eip" "vasilii-vpc-public-subnet-nat-elastic-ip" {
    # network_interface = aws_nat_gateway.vasilii-vpc-public-subnet-nat.network_interface_id
}
